tests/paczka1/small_fuzzy/86316776.err
Error in line 7: WGCzGzl S611 37,8
Error in line 11: KEXAH S118 76,4
